Navbar fix on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1887,7 +1887,6 @@ body {
       padding: 0 20px !important;
       border-radius: 0px;
       padding-bottom: 50px !important;
-      width: 100%;
     }
 
     .usernameinput {
